--- a/react-e_commerce/package.json
+++ b/react-e_commerce/package.json
@@ -11,10 +11,14 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-logger": "^1.1.0",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
