--- a/react-e_commerce/package.json
+++ b/react-e_commerce/package.json
@@ -19,6 +19,8 @@
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
+    "selector": "^2.0.17",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
